# RustyRhythm

./: CONFIG_DOCUMENTATION.md  Cargo.toml  README.md  build.sh  config.json  manifest_v2.json  popup.html  screendump.xcf  test.html
pkg/: README.md  amazing_extension.d.ts  amazing_extension.js  amazing_extension_bg.wasm.d.ts  manifest.json  package.json
src/: config.rs  lib.rs  parser.rs  util.rs
tests/: test.rs
