[package]
name = "amazing-extension"
version = "0.1.0"
authors = ["Hector <agenthector007@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.6"
regex = "1.11.1"
serde_json = "1.0.138"

[dependencies.web-sys]
version = "0.3"
features = ["console", "Window", "Document", "Element", "HtmlElement"]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
